started cleaning code smells